clusters/on-prem/manifests/14-ot-redis-operator/02-redis-insight/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  namespace: redis-operator
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.home.daniel-enrique.com/oauth2/start?rd=$scheme://$host$request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - redis-insight.home.daniel-enrique.com
    secretName: wildcard-home-tls # Make sure this exists in redis-operator namespace
  rules:
  - host: redis-insight.home.daniel-enrique.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-insight
            port:
              number: 5540
